# mtg-card-analysis

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
data/processed/: cards_blb.parquet  cards_dft.parquet  cards_dsk.parquet  cards_eoe.parquet  cards_fdn.parquet  cards_fin.parquet  cards_tdm.parquet  cards_tmt.parquet  features_blb.parquet  (+23 more)
outputs/: README.md  README_blb.md  README_dft.md  README_dsk.md  README_eoe.md  README_fdn.md  README_fin.md  README_tdm.md  README_tmt.md  ols_coefficients.csv  ols_coefficients_blb.csv  ols_coefficients_blb_no_rarity.csv  ols_coefficients_dft_no_rarity.csv  ols_coefficients_dft_with_rarity.csv  ols_coefficients_dsk_no_rarity.csv  ols_coefficients_dsk_with_rarity.csv  ols_coefficients_eoe.csv  ols_coefficients_eoe_no_rarity.csv  ols_coefficients_fdn_no_rarity.csv  ols_coefficients_fdn_with_rarity.csv  ols_coefficients_fin_no_rarity.csv  ols_coefficients_fin_with_rarity.csv  ols_coefficients_tdm.csv  ols_coefficients_tdm_no_rarity.csv  ols_coefficients_tmt.csv  ols_coefficients_tmt_no_rarity.csv  ols_coefficients_tmt_with_rarity.csv  residuals.csv  residuals_blb_no_rarity.csv  residuals_blb_with_rarity.csv  residuals_dft.csv  residuals_dft_no_rarity.csv  residuals_dsk_no_rarity.csv  residuals_dsk_with_rarity.csv  residuals_eoe_no_rarity.csv  residuals_eoe_with_rarity.csv  residuals_fdn.csv  residuals_fdn_no_rarity.csv  residuals_fin.csv  residuals_fin_no_rarity.csv  (+5 more)
src/: build_image_map.py  compare_sets.py  featurize.py  fetch_17lands.py  fetch_cards.py  load_17lands.py  make_outputs.py  run_pipeline.py  train.py
(+42 files in other folders)
